--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -256,7 +256,7 @@ msgid "^1WEBSITE"
 msgstr ""
 
 #: etmain/ui/credits_etlegacy.menu:193 etmain/ui/credits_quit.menu:260
-msgid "© 2012-2015 ET Legacy Team - under the terms of GPL version 3."
+msgid "© 2012-2018 ET:Legacy Team - under the terms of GPL version 3."
 msgstr ""
 
 #: etmain/ui/credits_etlegacy.menu:201
@@ -7250,9 +7250,6 @@ msgstr ""
 msgid "Specify receiver of quick radio messages"
 msgstr ""
 
-msgid "Renderer:"
-msgstr ""
-
 msgid "High Quality Video:"
 msgstr ""
 
@@ -7352,3 +7349,110 @@ msgstr ""
 msgid "3. Sniper Rifle"
 msgstr ""
 
+msgid "English (default)  "
+msgstr ""
+
+msgid "Czech"
+msgstr ""
+
+msgid "Dutch"
+msgstr ""
+
+msgid "Finnish"
+msgstr ""
+
+msgid "French"
+msgstr ""
+
+msgid "German"
+msgstr ""
+
+msgid "Greek"
+msgstr ""
+
+msgid "Hungarian"
+msgstr ""
+
+msgid "Italian"
+msgstr ""
+
+msgid "Norwegian"
+msgstr ""
+
+msgid "Polish"
+msgstr ""
+
+msgid "Portuguese"
+msgstr ""
+
+msgid "Russian"
+msgstr ""
+
+msgid "Spanish"
+msgstr ""
+
+msgid "Turkish"
+msgstr ""
+
+msgid "desktop resolution"
+msgstr ""
+
+msgid "custom resolution"
+msgstr ""
+
+msgid "856*480 Wide Screen"
+msgstr ""
+
+msgid "Windowed"
+msgstr ""
+
+msgid "Fullscreen"
+msgstr ""
+
+msgid "Windowed Fullscreen"
+msgstr ""
+
+msgid "Original"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "Show Speed:"
+msgstr ""
+
+msgid "UPS + highest speed"
+msgstr ""
+
+msgid "KPH + highest speed"
+msgstr ""
+
+msgid "MPH + highest speed"
+msgstr ""
+
+msgid "Displays speed of player"
+msgstr ""
+
+msgid "Vanilla (default)  "
+msgstr ""
+
+msgid "Direct connect"
+msgstr ""
+
+msgid "Override nickname"
+msgstr ""
+
+msgid "Mute channel"
+msgstr ""
+
+msgid "Direct + Override"
+msgstr ""
+
+msgid "Direct + Mute"
+msgstr ""
+
+msgid "Override + Mute"
+msgstr ""
+
+msgid "Direct + Over. + Mute"
+msgstr ""
