--- a/etmain/locale/client/bg.po
+++ b/etmain/locale/client/bg.po
@@ -2,37 +2,25 @@
 # Copyright (C) 2012-2018 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
-# Bálint Tóth-Lukács <hatcher.tb@gmail.com>, 2018
+# Nerwitz Panzerfizt, 2018
 msgid ""
 msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2018-02-23 17:19+0000\n"
-"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
-"Language-Team: Hungarian (http://www.transifex.com/etlegacy/etlegacy/language/hu/)\n"
+"PO-Revision-Date: 2018-09-28 12:16+0000\n"
+"Last-Translator: IR4T4 <gutzu@gmx.ch>\n"
+"Language-Team: Bulgarian (http://www.transifex.com/etlegacy/etlegacy/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: hu\n"
+"Language: bg\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: src/client/cl_console.c:674
-msgid "say_team:"
-msgstr "say_team:"
-
-#: src/client/cl_console.c:682
-msgid "say_fireteam:"
-msgstr "say_fireteam:"
-
-#: src/client/cl_console.c:690
-msgid "say:"
-msgstr "say:"
 
 #: src/client/cl_console.c:803
 #, c-format
 msgid "%s (UPDATE AVAILABLE)"
-msgstr "%s (FRISSÍTÉS ELÉRHETŐ)"
+msgstr "%s (ДОСТЪПНО ОБНОВЛЕНИЕ)"
 
 msgid "MOUSE1"
 msgstr "MOUSE1"
