--- a/etmain/locale/client/fi.po
+++ b/etmain/locale/client/fi.po
@@ -1,5 +1,5 @@
 # Translation pot file for the ET: Legacyclient
-# Copyright (C) 2012-2015 ET: Legacy Team
+# Copyright (C) 2012-2018 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
 # Henrik Heino <henrik.heino@gmail.com>, 2016
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2016-09-19 22:13+0000\n"
-"Last-Translator: Henrik Heino <henrik.heino@gmail.com>\n"
+"PO-Revision-Date: 2018-09-21 14:30+0000\n"
+"Last-Translator: Artem Vorotnikov <artem@vorotnikov.me>\n"
 "Language-Team: Finnish (http://www.transifex.com/etlegacy/etlegacy/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,28 +18,16 @@ msgstr ""
 "Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/client/cl_console.c:674
-msgid "say_team:"
-msgstr "sano_tiimi:"
-
-#: src/client/cl_console.c:682
-msgid "say_fireteam:"
-msgstr "sano_partio:"
-
-#: src/client/cl_console.c:690
-msgid "say:"
-msgstr "sano:"
-
 #: src/client/cl_console.c:803
 #, c-format
 msgid "%s (UPDATE AVAILABLE)"
 msgstr "%s (PÄIVITYS SAATAVILLA)"
 
 msgid "MOUSE1"
-msgstr ""
+msgstr "HIIRI1"
 
 msgid "MOUSE2"
-msgstr ""
+msgstr "HIIRI2"
 
 msgid "SPACE"
-msgstr ""
+msgstr "VÄLILYÖNTI"
