--- a/etmain/locale/client/sr.po
+++ b/etmain/locale/client/sr.po
@@ -2,37 +2,25 @@
 # Copyright (C) 2012-2018 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
-# Bálint Tóth-Lukács <hatcher.tb@gmail.com>, 2018
+# Col Serra, 2018
 msgid ""
 msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2018-02-23 17:19+0000\n"
-"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
-"Language-Team: Hungarian (http://www.transifex.com/etlegacy/etlegacy/language/hu/)\n"
+"PO-Revision-Date: 2018-09-21 14:30+0000\n"
+"Last-Translator: Artem Vorotnikov <artem@vorotnikov.me>\n"
+"Language-Team: Serbian (http://www.transifex.com/etlegacy/etlegacy/language/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: hu\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: src/client/cl_console.c:674
-msgid "say_team:"
-msgstr "say_team:"
-
-#: src/client/cl_console.c:682
-msgid "say_fireteam:"
-msgstr "say_fireteam:"
-
-#: src/client/cl_console.c:690
-msgid "say:"
-msgstr "say:"
+"Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/client/cl_console.c:803
 #, c-format
 msgid "%s (UPDATE AVAILABLE)"
-msgstr "%s (FRISSÍTÉS ELÉRHETŐ)"
+msgstr "%s(АПДЕЈТ ДОСТУПАН)"
 
 msgid "MOUSE1"
 msgstr "MOUSE1"
