--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -1,11 +1,11 @@
 # Translation pot file for the ET: Legacy mod
-# Copyright (C) 2012-2015 ET: Legacy Team
+# Copyright (C) 2012-2018 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: ET: Legacy v2.74\n"
+"Project-Id-Version: ET: Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
